# SerMan

./: README.md  pyproject.toml
serman/: main.py  manager.py  ui.py
serman/utils/: __init__.py  service_manager.py  utils.py
